# configs

CMake/: CMakeLists.txt
clang-format/: .clang-format
vscode/: settings.json
